--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body{
     display:flex;
     flex-direction: column;
     align-items: center;
-    background:slategray;
+    background:black;
     border-radius:10px;
     height:500px;
     width:300px;
@@ -53,7 +53,20 @@ button{
     border-color: black;
     text-align: center;
 }
+.darkGray{
+    background: rgb(64,64,64);
+}
+.lightGray{
+    background: rgb(160,160,160);
+}
+.yellow{
+    background: #FCB31B;
+}
 
+#zero{
+    width: 120px;
+    border-radius: 20%;
+}
 
 .copyright{
     display:flex;
