--- a/css/style.css
+++ b/css/style.css
@@ -52,20 +52,54 @@ button{
     margin:3px;
     border-color: black;
     text-align: center;
+    cursor:pointer;
+    justify-content: center;
 }
+
+button:hover{
+    transform: scale(1.1) perspective(1px);
+
+}
+
+.threeButtonsRow{
+    display:flex;
+    align-items: center;
+}
+
 .darkGray{
     background: rgb(64,64,64);
+    color: white;
 }
 .lightGray{
     background: rgb(160,160,160);
 }
 .yellow{
     background: #FCB31B;
+    color: white;
+}
+
+.darkGray:hover{
+    background: rgb(160,160,160);
+}
+
+.lightGray:hover{
+    background: white;
+}
+
+.yellow:hover{
+    background:white;
+    color: #FCB31B;
 }
 
 #zero{
-    width: 120px;
-    border-radius: 20%;
+    width: 140px;
+    height: 50px;
+    
+    border-radius: 70px;
+    border:none;
+    padding: 10px 20px;
+    text-align: left;
+    display: inline-block;
 }
 
 .copyright{
