--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ html{
 }
 body{
     min-height: 100%;
-    background: #FCB31B;
+    background: #2c2c2c;;
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -12,6 +12,7 @@ body{
 
 .header{
     margin-bottom: 80px;
+    color:lavender;
 }
 
 .calculatorFrame{
@@ -23,6 +24,13 @@ body{
     height:500px;
     width:300px;
     margin-bottom:auto;
+
+    box-shadow: 0px 5px 10px 0px rgba(0,255,255,0.7);
+    ;
+}
+.calculatorFrame:hover{
+    transform: translateY(-5px);
+  box-shadow: 0px 10px 20px 2px rgba(0,255,255,0.7);
 }
 
 .window{
@@ -58,7 +66,6 @@ button{
 
 button:hover{
     transform: scale(1.1) perspective(1px);
-
 }
 
 .threeButtonsRow{
@@ -106,4 +113,5 @@ button:hover{
     display:flex;
     flex-grow:1;
     padding: 10px;
+    color:lavender;
 }
