--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,10 @@ body{
     width: 280px;
     height: 50px;
     align-items:center;
-    justify-content: right;
+    text-align: right;
+    padding-right: 20px;
+    padding-top: 20px;
+    padding-bottom: 15px;
     border-radius: 8px;
 }
 
